--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "fs": "^0.0.1-security",
+    "net": "^1.0.2",
     "next": "14.1.3",
+    "razorpay": "^2.9.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
-    "react-pro-sidebar": "^1.1.0"
+    "react-pro-sidebar": "^1.1.0",
+    "shortid": "^2.2.16",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
