--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "daisyui": "^4.7.3",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8"
+    
   },
   "devDependencies": {
     "@types/node": "^20",
