--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "daisyui": "^4.7.3",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -17,22 +18,16 @@
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "resend": "^3.2.0",
-    "daisyui": "^4.7.3",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8"
-    
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "daisyui": "^4.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
